fix alignment in welcome

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
   background-color: #003;
